[notifications popover] fixed content alignment in the header; removed the left black dots for items

--- a/media/css/seahub_react.css
+++ b/media/css/seahub_react.css
@@ -825,7 +825,7 @@ a, a:hover { color: #ec8000; }
 #notice-popover .sf-popover-close {
     position: absolute;
     right: 10px;
-    top: 5px;
+    top: 17px;
 }
 
 #notice-popover .sf-popover-hd {
